[gd_scene load_steps=42 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/background/back_7.png" type="Texture" id=2]
[ext_resource path="res://assets/background/back_0.png" type="Texture" id=3]
[ext_resource path="res://assets/background/back_2.png" type="Texture" id=4]
[ext_resource path="res://assets/dragon/flying_dragon-gold 2.png" type="Texture" id=5]
[ext_resource path="res://assets/dragon/flying_dragon-gold 1.png" type="Texture" id=6]
[ext_resource path="res://assets/dragon/flying_dragon-gold 3.png" type="Texture" id=7]
[ext_resource path="res://assets/castledell.png" type="Texture" id=8]
[ext_resource path="res://assets/borderButtons/quitButtonPressed.png" type="Texture" id=9]
[ext_resource path="res://assets/borderButtons/playButtonHover.png" type="Texture" id=10]
[ext_resource path="res://assets/borderButtons/playButtonPressed.png" type="Texture" id=11]
[ext_resource path="res://assets/borderButtons/playButton.png" type="Texture" id=12]
[ext_resource path="res://assets/borderButtons/quitButton.png" type="Texture" id=13]
[ext_resource path="res://assets/borderButtons/settingsButton.png" type="Texture" id=14]
[ext_resource path="res://assets/sounds/medieval sound.mp3" type="AudioStream" id=15]
[ext_resource path="res://assets/background/back_3.png" type="Texture" id=16]
[ext_resource path="res://assets/background/back_4.png" type="Texture" id=17]
[ext_resource path="res://assets/borderButtons/settingsButtonPressed.png" type="Texture" id=18]
[ext_resource path="res://assets/background/back_5.png" type="Texture" id=19]
[ext_resource path="res://assets/background/back_6.png" type="Texture" id=20]
[ext_resource path="res://assets/background/back_8.png" type="Texture" id=21]
[ext_resource path="res://assets/background/back_13.png" type="Texture" id=22]
[ext_resource path="res://assets/background/back_14.png" type="Texture" id=23]
[ext_resource path="res://assets/background/back_10.png" type="Texture" id=24]
[ext_resource path="res://assets/background/back_11.png" type="Texture" id=25]
[ext_resource path="res://assets/background/back_12.png" type="Texture" id=26]
[ext_resource path="res://assets/background/back_9.png" type="Texture" id=27]
[ext_resource path="res://assets/borderButtons/settingsButtonHover.png" type="Texture" id=28]
[ext_resource path="res://assets/borderButtons/quitButtonHover.png" type="Texture" id=29]
[ext_resource path="res://assets/sounds/wood-hard-hit.mp3" type="AudioStream" id=30]
[ext_resource path="res://assets/background/contour.png" type="Texture" id=31]
[ext_resource path="res://assets/borderButtons/usa copy.png" type="Texture" id=32]
[ext_resource path="res://assets/borderButtons/brazil copy.png" type="Texture" id=33]
[ext_resource path="res://scenes/Settings.tscn" type="PackedScene" id=34]
[ext_resource path="res://LevelsHover.png" type="Texture" id=35]
[ext_resource path="res://Levels.png" type="Texture" id=36]
[ext_resource path="res://LevelsPressed.png" type="Texture" id=37]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 2 ), ExtResource( 21 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="LargeTexture" id=3]

[sub_resource type="TileSet" id=157]
0/name = "contour.png 0"
0/texture = ExtResource( 31 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 16, 48, 144 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="MainMenu" type="Node2D"]
position = Vector2( 9, -22 )
scale = Vector2( 0.525307, 0.554606 )
script = ExtResource( 1 )

[node name="ThemeMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -10.0
autoplay = true
bus = "Music"

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 30 )
bus = "Effects"

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( 954.032, 578.805 )
scale = Vector2( 1.01176, 1.00537 )
frames = SubResource( 4 )
frame = 12
playing = true

[node name="Castledell" type="Sprite" parent="."]
position = Vector2( 532.423, 170.385 )
scale = Vector2( 1.25978, 1.27257 )
texture = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 159.406, 489.044 )
scale = Vector2( 2.50485, 2.0098 )
frames = SubResource( 1 )
playing = true

[node name="play_button" type="TextureButton" parent="."]
margin_left = 797.629
margin_top = 391.269
margin_right = 1069.63
margin_bottom = 460.269
rect_scale = Vector2( 1.27532, 1.59339 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 11 )
texture_hover = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="level_select" type="TextureButton" parent="."]
margin_left = 797.629
margin_top = 517.484
margin_right = 1069.63
margin_bottom = 586.484
rect_scale = Vector2( 1.27532, 1.59339 )
texture_normal = ExtResource( 36 )
texture_pressed = ExtResource( 37 )
texture_hover = ExtResource( 35 )
expand = true
stretch_mode = 6

[node name="settings_button" type="TextureButton" parent="."]
margin_left = 797.629
margin_top = 641.897
margin_right = 1069.63
margin_bottom = 710.897
rect_scale = Vector2( 1.27987, 1.5894 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 28 )
texture_focused = SubResource( 3 )
expand = true
stretch_mode = 6

[node name="quit_button" type="TextureButton" parent="."]
margin_left = 797.629
margin_top = 775.325
margin_right = 1069.63
margin_bottom = 844.325
rect_scale = Vector2( 1.27161, 1.61799 )
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 29 )
expand = true
stretch_mode = 6

[node name="Border" type="TileMap" parent="."]
position = Vector2( 0, 4 )
tile_set = SubResource( 157 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131070, -1610612736, 0, 65541, -1610612736, 0, 65549, -1610612736, 0, 65558, -2147483648, 0, 65565, -1610612736, 0, 65573, -1610612736, 0, 65581, -1610612736, 0, 65589, -1610612736, 0, 65597, -1610612736, 0, 65601, -1610612736, 0, 65609, -1610612736, 0, 65617, -1610612736, 0, 65625, -1610612736, 0, 65633, -1610612736, 0, 65641, -1610612736, 0, 65648, -1610612736, 0, 196606, 1610612736, 0, 131191, 0, 0, 393335, 0, 0, 720894, 1610612736, 0, 917623, 0, 0, 1245182, 1610612736, 0, 1441911, 0, 0, 1769470, 1610612736, 0, 1966199, 0, 0, 2293758, 1610612736, 0, 2490487, 0, 0, 2818046, 1610612736, 0, 3014775, 0, 0, 3342334, 1610612736, 0, 3539063, 0, 0, 3866622, 1610612736, 0, 4128766, 1610612736, 0, 4063351, 0, 0, 4456448, -1073741824, 0, 4456456, -1073741824, 0, 4456464, -1073741824, 0, 4456472, -1073741824, 0, 4456480, -1073741824, 0, 4456488, -1073741824, 0, 4456496, -1073741824, 0, 4456504, -1073741824, 0, 4456512, -1073741824, 0, 4456520, -1073741824, 0, 4456528, -1073741824, 0, 4456536, -1073741824, 0, 4456544, -1073741824, 0, 4456552, -1073741824, 0, 4456560, -1073741824, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 894.715
margin_top = 984.482
margin_right = 934.715
margin_bottom = 1024.48
rect_scale = Vector2( 4.12198, 4.24555 )

[node name="BR_button" type="TextureButton" parent="HBoxContainer"]
margin_right = 16.0
margin_bottom = 39.0
texture_normal = ExtResource( 33 )

[node name="EN_button" type="TextureButton" parent="HBoxContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 39.0
texture_normal = ExtResource( 32 )

[node name="PauseMenu" parent="." instance=ExtResource( 34 )]
visible = false
margin_top = 54.0924
margin_right = 1280.0
margin_bottom = 764.092
rect_scale = Vector2( 1.5, 1.5 )

[connection signal="pressed" from="play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="level_select" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="settings_button" to="." method="_on_config_button_pressed"]
[connection signal="pressed" from="quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HBoxContainer/BR_button" to="." method="_on_BR_button_pressed"]
[connection signal="pressed" from="HBoxContainer/EN_button" to="." method="_on_EN_button_pressed"]
